[package]
name = "kvs"
version = "0.1.1"
authors = ["naokilh <821874555@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["yaml"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
failure = "*"
log = "*"
env_logger = "*"
sled = "*"
structopt = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
walkdir = "*"
rand = "0.6.5"
criterion = "*"

[[bench]]
name = "engine_bench"
harness = false
