[package]
name = "kvs"
version = "0.1.1"
authors = ["naokilh <821874555@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["yaml"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
failure = "*"
log = "*"
env_logger = "*"
sled = "*"
structopt = "*"
crossbeam = "0.7.1"
rayon = "1.0.3"
num_cpus = "1.10.0"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
walkdir = "*"
rand = "0.6.5"
criterion = "0.3"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false
